# voiceai-dictation

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
scripts/: start.sh
tests/: test_dedup.py
voiceai/: __init__.py  __main__.py  config.py  controller.py  corrections.py  dedup.py  engine.py  hotkey.py  hotwords.py  injector.py  log.py  recorder.py  selftest.py
