[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceai-dictation"
version = "0.1.0"
description = "Local, privacy-first, GPU-accelerated voice-to-text dictation for Linux."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "duthink"},
]
keywords = ["voice", "dictation", "speech-to-text", "whisper", "linux", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
]

dependencies = [
    "faster-whisper>=1.0.0",
    "numpy>=1.24",
    "sounddevice>=0.4",
    "pynput>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/duthink/voiceai-dictation"
Repository = "https://github.com/duthink/voiceai-dictation"
Issues = "https://github.com/duthink/voiceai-dictation/issues"

[project.scripts]
voiceai = "voiceai.__main__:main"
voiceai-selftest = "voiceai.selftest:main"

[tool.setuptools.packages.find]
include = ["voiceai*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
